--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beautybookback-end",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "Seviços internos",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.6"
   }
 }
