--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "mercadopago": "^1.5.17",
     "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.6"
   }
